tapl/reconrec/parser.output
   0  $accept : %entry% $end

   1  input :
   2        | input LOAD
   3        | input SHOWCONTEXT DOUBLESEMI
   4        | input DOUBLESEMI
   5        | input oneREPL

   6  oneREPL : Command DOUBLESEMI
   7          | Command SEMI oneREPL

   8  toplevel : EOF
   9           | Command SEMI toplevel

  10  Command : TmWrap
  11          | UCID TyBinder
  12          | LCID Binder

  13  TyBinder :
  14           | EQ Ty

  15  Binder : COLON Ty
  16         | EQ Tm

  17  Ty : ArrowTy
  18     | REC UCID DOT Ty
  19     | REFTYPE ATy
  20     | SOURCE ATy
  21     | SINK ATy

  22  ArrowTy : ATy ARROW ArrowTy
  23          | ATy

  24  ATy : LPAREN Ty RPAREN
  25      | UCID
  26      | TOP
  27      | FLOAT
  28      | STRING
  29      | BOOL
  30      | NAT
  31      | UNITTYPE
  32      | LCURLY TyFields RCURLY
  33      | LT TyFields GT
  34      | LIST Ty

  35  LTy : LSQUARE Ty RSQUARE

  36  TyFields :
  37           | NETyFields

  38  NETyFields : TyField
  39             | TyField COMMA NETyFields

  40  TyField : LCID COLON Ty
  41          | Ty

  42  TmWrap : TmWrap COMMA LCID EQ Tm
  43         | Tm WHERE LCID EQ Tm
  44         | Tm

  45  Cases : Case
  46        | Case VBAR Cases

  47  Case : LT LCID EQ LCID GT DARROW AppTm

  48  Tm : AppTm
  49     | LAM LCID DOT Tm
  50     | LAM LCID COLON Ty DOT Tm
  51     | LAM USCORE COLON Ty DOT Tm
  52     | IF Tm THEN Tm ELSE Tm
  53     | LET LCID EQ Tm IN Tm
  54     | LET USCORE EQ Tm IN Tm
  55     | LETREC LCID EQ Tm IN Tm
  56     | LETREC LCID COLON Ty EQ Tm IN Tm
  57     | CASE Tm OF Cases
  58     | AppTm COLONEQ AppTm
  59     | CONS LTy ATm ATm
  60     | HEAD LTy ATm
  61     | TAIL LTy ATm
  62     | ISNIL LTy ATm

  63  AppTm : PathTm
  64        | AppTm PathTm
  65        | PathTm TIMESFLOAT PathTm
  66        | PathTm STAR PathTm
  67        | FOLD LSQUARE Ty RSQUARE
  68        | UNFOLD LSQUARE Ty RSQUARE
  69        | FIX PathTm
  70        | REF PathTm
  71        | BANG PathTm
  72        | SUCC PathTm
  73        | PRED PathTm
  74        | ISZERO PathTm

  75  PathTm : PathTm DOT LCID
  76         | PathTm DOT INTV
  77         | AscribeTm

  78  AscribeTm : ATm AS Ty
  79            | ATm

  80  ATm : LPAREN TmSeq RPAREN
  81      | LCURLY Fields RCURLY
  82      | LT LCID EQ Tm GT AS Ty
  83      | LCID
  84      | STRINGV
  85      | FLOATV
  86      | UNIT
  87      | TRUE
  88      | FALSE
  89      | INTV
  90      | NIL LTy

  91  TmSeq : Tm
  92        | Tm SEMI TmSeq

  93  Fields :
  94         | NEFields

  95  NEFields : Field
  96           | Field COMMA NEFields

  97  Field : LCID EQ Tm
  98        | Tm

  99  %entry% : '\001' toplevel
 100          | '\002' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (99)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	UCID  shift 24
	LCID  shift 25
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	EOF  shift 30
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	toplevel  goto 34
	Command  goto 35
	TmWrap  goto 36
	Tm  goto 37
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 2
	%entry% : '\002' . input  (100)
	input : .  (1)

	.  reduce 1

	input  goto 42


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	AppTm : FOLD . LSQUARE Ty RSQUARE  (67)

	LSQUARE  shift 43
	.  error


state 5
	AppTm : UNFOLD . LSQUARE Ty RSQUARE  (68)

	LSQUARE  shift 44
	.  error


state 6
	AppTm : REF . PathTm  (70)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 46
	AscribeTm  goto 41


state 7
	Tm : TAIL . LTy ATm  (61)

	LSQUARE  shift 47
	.  error

	LTy  goto 48


state 8
	Tm : HEAD . LTy ATm  (60)

	LSQUARE  shift 47
	.  error

	LTy  goto 49


state 9
	Tm : ISNIL . LTy ATm  (62)

	LSQUARE  shift 47
	.  error

	LTy  goto 50


state 10
	Tm : CONS . LTy ATm ATm  (59)

	LSQUARE  shift 47
	.  error

	LTy  goto 51


state 11
	ATm : NIL . LTy  (90)

	LSQUARE  shift 47
	.  error

	LTy  goto 52


state 12
	Tm : LETREC . LCID EQ Tm IN Tm  (55)
	Tm : LETREC . LCID COLON Ty EQ Tm IN Tm  (56)

	LCID  shift 53
	.  error


state 13
	AppTm : FIX . PathTm  (69)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 54
	AscribeTm  goto 41


state 14
	Tm : CASE . Tm OF Cases  (57)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Tm  goto 55
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 15
	ATm : UNIT .  (86)

	.  reduce 86


state 16
	Tm : LET . LCID EQ Tm IN Tm  (53)
	Tm : LET . USCORE EQ Tm IN Tm  (54)

	LCID  shift 56
	USCORE  shift 57
	.  error


state 17
	AppTm : SUCC . PathTm  (72)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 58
	AscribeTm  goto 41


state 18
	AppTm : PRED . PathTm  (73)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 59
	AscribeTm  goto 41


state 19
	AppTm : ISZERO . PathTm  (74)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 60
	AscribeTm  goto 41


state 20
	Tm : LAM . LCID DOT Tm  (49)
	Tm : LAM . LCID COLON Ty DOT Tm  (50)
	Tm : LAM . USCORE COLON Ty DOT Tm  (51)

	LCID  shift 61
	USCORE  shift 62
	.  error


state 21
	Tm : IF . Tm THEN Tm ELSE Tm  (52)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Tm  goto 63
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 22
	ATm : TRUE .  (87)

	.  reduce 87


state 23
	ATm : FALSE .  (88)

	.  reduce 88


state 24
	Command : UCID . TyBinder  (11)
	TyBinder : .  (13)

	EQ  shift 64
	SEMI  reduce 13
	DOUBLESEMI  reduce 13

	TyBinder  goto 65


state 25
	Command : LCID . Binder  (12)
	ATm : LCID .  (83)

	COLON  shift 66
	EQ  shift 67
	NIL  reduce 83
	TIMESFLOAT  reduce 83
	AS  reduce 83
	UNIT  reduce 83
	WHERE  reduce 83
	TRUE  reduce 83
	FALSE  reduce 83
	LCID  reduce 83
	INTV  reduce 83
	FLOATV  reduce 83
	STRINGV  reduce 83
	COLONEQ  reduce 83
	COMMA  reduce 83
	DOT  reduce 83
	LCURLY  reduce 83
	LPAREN  reduce 83
	LT  reduce 83
	SEMI  reduce 83
	STAR  reduce 83
	DOUBLESEMI  reduce 83

	Binder  goto 68


state 26
	ATm : INTV .  (89)

	.  reduce 89


state 27
	ATm : FLOATV .  (85)

	.  reduce 85


state 28
	ATm : STRINGV .  (84)

	.  reduce 84


state 29
	AppTm : BANG . PathTm  (71)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 69
	AscribeTm  goto 41


state 30
	toplevel : EOF .  (8)

	.  reduce 8


state 31
	ATm : LCURLY . Fields RCURLY  (81)
	Fields : .  (93)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 70
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	RCURLY  reduce 93

	Tm  goto 71
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41
	Fields  goto 72
	NEFields  goto 73
	Field  goto 74


state 32
	ATm : LPAREN . TmSeq RPAREN  (80)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Tm  goto 75
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41
	TmSeq  goto 76


state 33
	ATm : LT . LCID EQ Tm GT AS Ty  (82)

	LCID  shift 77
	.  error


state 34
	%entry% : '\001' toplevel .  (99)

	.  reduce 99


state 35
	toplevel : Command . SEMI toplevel  (9)

	SEMI  shift 78
	.  error


state 36
	Command : TmWrap .  (10)
	TmWrap : TmWrap . COMMA LCID EQ Tm  (42)

	COMMA  shift 79
	SEMI  reduce 10
	DOUBLESEMI  reduce 10


state 37
	TmWrap : Tm . WHERE LCID EQ Tm  (43)
	TmWrap : Tm .  (44)

	WHERE  shift 80
	COMMA  reduce 44
	SEMI  reduce 44
	DOUBLESEMI  reduce 44


state 38
	Tm : AppTm .  (48)
	Tm : AppTm . COLONEQ AppTm  (58)
	AppTm : AppTm . PathTm  (64)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	COLONEQ  shift 81
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	OF  reduce 48
	WHERE  reduce 48
	IN  reduce 48
	THEN  reduce 48
	ELSE  reduce 48
	COMMA  reduce 48
	GT  reduce 48
	RCURLY  reduce 48
	RPAREN  reduce 48
	SEMI  reduce 48
	DOUBLESEMI  reduce 48

	ATm  goto 39
	PathTm  goto 82
	AscribeTm  goto 41


state 39
	AscribeTm : ATm . AS Ty  (78)
	AscribeTm : ATm .  (79)

	AS  shift 83
	NIL  reduce 79
	TIMESFLOAT  reduce 79
	OF  reduce 79
	UNIT  reduce 79
	WHERE  reduce 79
	IN  reduce 79
	THEN  reduce 79
	ELSE  reduce 79
	TRUE  reduce 79
	FALSE  reduce 79
	LCID  reduce 79
	INTV  reduce 79
	FLOATV  reduce 79
	STRINGV  reduce 79
	COLONEQ  reduce 79
	COMMA  reduce 79
	DOT  reduce 79
	GT  reduce 79
	LCURLY  reduce 79
	LPAREN  reduce 79
	LT  reduce 79
	RCURLY  reduce 79
	RPAREN  reduce 79
	SEMI  reduce 79
	STAR  reduce 79
	VBAR  reduce 79
	DOUBLESEMI  reduce 79


state 40
	AppTm : PathTm .  (63)
	AppTm : PathTm . TIMESFLOAT PathTm  (65)
	AppTm : PathTm . STAR PathTm  (66)
	PathTm : PathTm . DOT LCID  (75)
	PathTm : PathTm . DOT INTV  (76)

	TIMESFLOAT  shift 84
	DOT  shift 85
	STAR  shift 86
	NIL  reduce 63
	OF  reduce 63
	UNIT  reduce 63
	WHERE  reduce 63
	IN  reduce 63
	THEN  reduce 63
	ELSE  reduce 63
	TRUE  reduce 63
	FALSE  reduce 63
	LCID  reduce 63
	INTV  reduce 63
	FLOATV  reduce 63
	STRINGV  reduce 63
	COLONEQ  reduce 63
	COMMA  reduce 63
	GT  reduce 63
	LCURLY  reduce 63
	LPAREN  reduce 63
	LT  reduce 63
	RCURLY  reduce 63
	RPAREN  reduce 63
	SEMI  reduce 63
	VBAR  reduce 63
	DOUBLESEMI  reduce 63


state 41
	PathTm : AscribeTm .  (77)

	.  reduce 77


state 42
	input : input . LOAD  (2)
	input : input . SHOWCONTEXT DOUBLESEMI  (3)
	input : input . DOUBLESEMI  (4)
	input : input . oneREPL  (5)
	%entry% : '\002' input .  (100)

	LOAD  shift 87
	SHOWCONTEXT  shift 88
	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	UCID  shift 24
	LCID  shift 25
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	DOUBLESEMI  shift 89
	$end  reduce 100

	oneREPL  goto 90
	Command  goto 91
	TmWrap  goto 36
	Tm  goto 37
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 43
	AppTm : FOLD LSQUARE . Ty RSQUARE  (67)

	REC  shift 92
	TOP  shift 93
	SOURCE  shift 94
	SINK  shift 95
	REFTYPE  shift 96
	LIST  shift 97
	STRING  shift 98
	FLOAT  shift 99
	UNITTYPE  shift 100
	BOOL  shift 101
	NAT  shift 102
	UCID  shift 103
	LCURLY  shift 104
	LPAREN  shift 105
	LT  shift 106
	.  error

	Ty  goto 107
	ArrowTy  goto 108
	ATy  goto 109


state 44
	AppTm : UNFOLD LSQUARE . Ty RSQUARE  (68)

	REC  shift 92
	TOP  shift 93
	SOURCE  shift 94
	SINK  shift 95
	REFTYPE  shift 96
	LIST  shift 97
	STRING  shift 98
	FLOAT  shift 99
	UNITTYPE  shift 100
	BOOL  shift 101
	NAT  shift 102
	UCID  shift 103
	LCURLY  shift 104
	LPAREN  shift 105
	LT  shift 106
	.  error

	Ty  goto 110
	ArrowTy  goto 108
	ATy  goto 109


state 45
	ATm : LCID .  (83)

	.  reduce 83


state 46
	AppTm : REF PathTm .  (70)
	PathTm : PathTm . DOT LCID  (75)
	PathTm : PathTm . DOT INTV  (76)

	DOT  shift 85
	NIL  reduce 70
	OF  reduce 70
	UNIT  reduce 70
	WHERE  reduce 70
	IN  reduce 70
	THEN  reduce 70
	ELSE  reduce 70
	TRUE  reduce 70
	FALSE  reduce 70
	LCID  reduce 70
	INTV  reduce 70
	FLOATV  reduce 70
	STRINGV  reduce 70
	COLONEQ  reduce 70
	COMMA  reduce 70
	GT  reduce 70
	LCURLY  reduce 70
	LPAREN  reduce 70
	LT  reduce 70
	RCURLY  reduce 70
	RPAREN  reduce 70
	SEMI  reduce 70
	VBAR  reduce 70
	DOUBLESEMI  reduce 70


state 47
	LTy : LSQUARE . Ty RSQUARE  (35)

	REC  shift 92
	TOP  shift 93
	SOURCE  shift 94
	SINK  shift 95
	REFTYPE  shift 96
	LIST  shift 97
	STRING  shift 98
	FLOAT  shift 99
	UNITTYPE  shift 100
	BOOL  shift 101
	NAT  shift 102
	UCID  shift 103
	LCURLY  shift 104
	LPAREN  shift 105
	LT  shift 106
	.  error

	Ty  goto 111
	ArrowTy  goto 108
	ATy  goto 109


state 48
	Tm : TAIL LTy . ATm  (61)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 112


state 49
	Tm : HEAD LTy . ATm  (60)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 113


state 50
	Tm : ISNIL LTy . ATm  (62)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 114


state 51
	Tm : CONS LTy . ATm ATm  (59)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 115


state 52
	ATm : NIL LTy .  (90)

	.  reduce 90


state 53
	Tm : LETREC LCID . EQ Tm IN Tm  (55)
	Tm : LETREC LCID . COLON Ty EQ Tm IN Tm  (56)

	COLON  shift 116
	EQ  shift 117
	.  error


state 54
	AppTm : FIX PathTm .  (69)
	PathTm : PathTm . DOT LCID  (75)
	PathTm : PathTm . DOT INTV  (76)

	DOT  shift 85
	NIL  reduce 69
	OF  reduce 69
	UNIT  reduce 69
	WHERE  reduce 69
	IN  reduce 69
	THEN  reduce 69
	ELSE  reduce 69
	TRUE  reduce 69
	FALSE  reduce 69
	LCID  reduce 69
	INTV  reduce 69
	FLOATV  reduce 69
	STRINGV  reduce 69
	COLONEQ  reduce 69
	COMMA  reduce 69
	GT  reduce 69
	LCURLY  reduce 69
	LPAREN  reduce 69
	LT  reduce 69
	RCURLY  reduce 69
	RPAREN  reduce 69
	SEMI  reduce 69
	VBAR  reduce 69
	DOUBLESEMI  reduce 69


state 55
	Tm : CASE Tm . OF Cases  (57)

	OF  shift 118
	.  error


state 56
	Tm : LET LCID . EQ Tm IN Tm  (53)

	EQ  shift 119
	.  error


state 57
	Tm : LET USCORE . EQ Tm IN Tm  (54)

	EQ  shift 120
	.  error


state 58
	AppTm : SUCC PathTm .  (72)
	PathTm : PathTm . DOT LCID  (75)
	PathTm : PathTm . DOT INTV  (76)

	DOT  shift 85
	NIL  reduce 72
	OF  reduce 72
	UNIT  reduce 72
	WHERE  reduce 72
	IN  reduce 72
	THEN  reduce 72
	ELSE  reduce 72
	TRUE  reduce 72
	FALSE  reduce 72
	LCID  reduce 72
	INTV  reduce 72
	FLOATV  reduce 72
	STRINGV  reduce 72
	COLONEQ  reduce 72
	COMMA  reduce 72
	GT  reduce 72
	LCURLY  reduce 72
	LPAREN  reduce 72
	LT  reduce 72
	RCURLY  reduce 72
	RPAREN  reduce 72
	SEMI  reduce 72
	VBAR  reduce 72
	DOUBLESEMI  reduce 72


state 59
	AppTm : PRED PathTm .  (73)
	PathTm : PathTm . DOT LCID  (75)
	PathTm : PathTm . DOT INTV  (76)

	DOT  shift 85
	NIL  reduce 73
	OF  reduce 73
	UNIT  reduce 73
	WHERE  reduce 73
	IN  reduce 73
	THEN  reduce 73
	ELSE  reduce 73
	TRUE  reduce 73
	FALSE  reduce 73
	LCID  reduce 73
	INTV  reduce 73
	FLOATV  reduce 73
	STRINGV  reduce 73
	COLONEQ  reduce 73
	COMMA  reduce 73
	GT  reduce 73
	LCURLY  reduce 73
	LPAREN  reduce 73
	LT  reduce 73
	RCURLY  reduce 73
	RPAREN  reduce 73
	SEMI  reduce 73
	VBAR  reduce 73
	DOUBLESEMI  reduce 73


state 60
	AppTm : ISZERO PathTm .  (74)
	PathTm : PathTm . DOT LCID  (75)
	PathTm : PathTm . DOT INTV  (76)

	DOT  shift 85
	NIL  reduce 74
	OF  reduce 74
	UNIT  reduce 74
	WHERE  reduce 74
	IN  reduce 74
	THEN  reduce 74
	ELSE  reduce 74
	TRUE  reduce 74
	FALSE  reduce 74
	LCID  reduce 74
	INTV  reduce 74
	FLOATV  reduce 74
	STRINGV  reduce 74
	COLONEQ  reduce 74
	COMMA  reduce 74
	GT  reduce 74
	LCURLY  reduce 74
	LPAREN  reduce 74
	LT  reduce 74
	RCURLY  reduce 74
	RPAREN  reduce 74
	SEMI  reduce 74
	VBAR  reduce 74
	DOUBLESEMI  reduce 74


state 61
	Tm : LAM LCID . DOT Tm  (49)
	Tm : LAM LCID . COLON Ty DOT Tm  (50)

	COLON  shift 121
	DOT  shift 122
	.  error


state 62
	Tm : LAM USCORE . COLON Ty DOT Tm  (51)

	COLON  shift 123
	.  error


state 63
	Tm : IF Tm . THEN Tm ELSE Tm  (52)

	THEN  shift 124
	.  error


state 64
	TyBinder : EQ . Ty  (14)

	REC  shift 92
	TOP  shift 93
	SOURCE  shift 94
	SINK  shift 95
	REFTYPE  shift 96
	LIST  shift 97
	STRING  shift 98
	FLOAT  shift 99
	UNITTYPE  shift 100
	BOOL  shift 101
	NAT  shift 102
	UCID  shift 103
	LCURLY  shift 104
	LPAREN  shift 105
	LT  shift 106
	.  error

	Ty  goto 125
	ArrowTy  goto 108
	ATy  goto 109


state 65
	Command : UCID TyBinder .  (11)

	.  reduce 11


state 66
	Binder : COLON . Ty  (15)

	REC  shift 92
	TOP  shift 93
	SOURCE  shift 94
	SINK  shift 95
	REFTYPE  shift 96
	LIST  shift 97
	STRING  shift 98
	FLOAT  shift 99
	UNITTYPE  shift 100
	BOOL  shift 101
	NAT  shift 102
	UCID  shift 103
	LCURLY  shift 104
	LPAREN  shift 105
	LT  shift 106
	.  error

	Ty  goto 126
	ArrowTy  goto 108
	ATy  goto 109


state 67
	Binder : EQ . Tm  (16)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Tm  goto 127
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 68
	Command : LCID Binder .  (12)

	.  reduce 12


state 69
	AppTm : BANG PathTm .  (71)
	PathTm : PathTm . DOT LCID  (75)
	PathTm : PathTm . DOT INTV  (76)

	DOT  shift 85
	NIL  reduce 71
	OF  reduce 71
	UNIT  reduce 71
	WHERE  reduce 71
	IN  reduce 71
	THEN  reduce 71
	ELSE  reduce 71
	TRUE  reduce 71
	FALSE  reduce 71
	LCID  reduce 71
	INTV  reduce 71
	FLOATV  reduce 71
	STRINGV  reduce 71
	COLONEQ  reduce 71
	COMMA  reduce 71
	GT  reduce 71
	LCURLY  reduce 71
	LPAREN  reduce 71
	LT  reduce 71
	RCURLY  reduce 71
	RPAREN  reduce 71
	SEMI  reduce 71
	VBAR  reduce 71
	DOUBLESEMI  reduce 71


state 70
	ATm : LCID .  (83)
	Field : LCID . EQ Tm  (97)

	EQ  shift 128
	NIL  reduce 83
	TIMESFLOAT  reduce 83
	AS  reduce 83
	UNIT  reduce 83
	TRUE  reduce 83
	FALSE  reduce 83
	LCID  reduce 83
	INTV  reduce 83
	FLOATV  reduce 83
	STRINGV  reduce 83
	COLONEQ  reduce 83
	COMMA  reduce 83
	DOT  reduce 83
	LCURLY  reduce 83
	LPAREN  reduce 83
	LT  reduce 83
	RCURLY  reduce 83
	STAR  reduce 83


state 71
	Field : Tm .  (98)

	.  reduce 98


state 72
	ATm : LCURLY Fields . RCURLY  (81)

	RCURLY  shift 129
	.  error


state 73
	Fields : NEFields .  (94)

	.  reduce 94


state 74
	NEFields : Field .  (95)
	NEFields : Field . COMMA NEFields  (96)

	COMMA  shift 130
	RCURLY  reduce 95


state 75
	TmSeq : Tm .  (91)
	TmSeq : Tm . SEMI TmSeq  (92)

	SEMI  shift 131
	RPAREN  reduce 91


state 76
	ATm : LPAREN TmSeq . RPAREN  (80)

	RPAREN  shift 132
	.  error


state 77
	ATm : LT LCID . EQ Tm GT AS Ty  (82)

	EQ  shift 133
	.  error


state 78
	toplevel : Command SEMI . toplevel  (9)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	UCID  shift 24
	LCID  shift 25
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	EOF  shift 30
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	toplevel  goto 134
	Command  goto 35
	TmWrap  goto 36
	Tm  goto 37
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 79
	TmWrap : TmWrap COMMA . LCID EQ Tm  (42)

	LCID  shift 135
	.  error


state 80
	TmWrap : Tm WHERE . LCID EQ Tm  (43)

	LCID  shift 136
	.  error


state 81
	Tm : AppTm COLONEQ . AppTm  (58)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	NIL  shift 11
	FIX  shift 13
	UNIT  shift 15
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	AppTm  goto 137
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 82
	AppTm : AppTm PathTm .  (64)
	PathTm : PathTm . DOT LCID  (75)
	PathTm : PathTm . DOT INTV  (76)
